first commit to branch, text truncating maybe fixed

--- a/container2-frontend/datatable.css
+++ b/container2-frontend/datatable.css
@@ -4,3 +4,8 @@
     text-overflow: ellipsis;
     white-space: nowrap;
   }
+
+  #tablica > tbody > tr > td:hover{
+    overflow: visible; 
+    white-space: normal; 
+}
